--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -1,3 +1,8 @@
-domain: bhch.github.io
-url: https://bhch.github.io
-baseurl: /react-microbundle-test/
+defaults:
+  -
+    scope:
+      path: ""
+    values:
+      domain: bhch.github.io
+      url: https://bhch.github.io
+      baseurl: /react-microbundle-test/
